Your new, corrected commit message

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,8 +1,9 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ "main" ]
+  pull_request:
+    branches:
+      - main
 
 jobs:
   compile:
@@ -34,12 +35,13 @@ jobs:
       - name: Gitleaks Code Scan
         run: gitleaks detect source . -r gitleaks-report.json -f json
 
+      - name: Trivy Installation
+        run: |
+          sudo apt-get install wget apt-transport-https gnupg lsb-release -y
+          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install trivy -y
+
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
-          severity: 'CRITICAL,HIGH'
+        run: trivy fs . --severity HIGH --exit-code 1 --ignore-unfixed --format table
