completer Entity Product dans context catalog

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,8 @@ jobs:
           cache: maven
       - name: compile with maven
         run: mvn compile
+      - name: test with maven
+        run: mvn test
 
   security-check:
     runs-on: ubuntu-latest
@@ -34,14 +36,3 @@ jobs:
 
       - name: Gitleaks Code Scan
         run: gitleaks detect source . -r gitleaks-report.json -f json
-
-      - name: Trivy Installation
-        run: |
-          sudo apt-get install wget apt-transport-https gnupg lsb-release -y
-          wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
-          echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
-          sudo apt-get update
-          sudo apt-get install trivy -y
-
-      - name: Run Trivy vulnerability scanner
-        run: trivy fs . --severity HIGH --exit-code 1 --ignore-unfixed --format table
