--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,3 +50,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag lafrindi/ddd-stock-app:latest
+      - name: push image
+        run: |
+          docker login -u lafrindi -p ${{docker_token}}
+          docker push lafrindi/ddd-stock-app:latest
